k8-deploy.yaml
# Creates a deployment set 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue
  labels:
    app: catalogue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalogue 
  template:
    metadata:
      labels:
        app: catalogue
    spec:
      containers:
      - name: catalogue
        image: 355449129696.dkr.ecr.us-east-1.amazonaws.com/catalogue:4.0.4
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: catalogue-svc
spec:
  # type: LoadBalancer
  selector:
    app: catalogue
  ports:
    - protocol: TCP
      port: 8080              # Port number of the service that it has to listen on 
      targetPort: 8080        # Port number of the container that it has to forward to

---
# Ingress Resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservicea
spec:
  rules:
  - host: catalogue.robos-shop.online
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: catalogue-svc
            port:
              number: 80
  ingressClassName: nginx
